# distributed_structures

./: .gitignore  Makefile  daemon.py  env_vars.sh  pyproject.toml
distributed_structures/: __init__.py  block.py  common.py  distributed_list.py  journal.py  journal_block.py  ledger.py  node.py  subroutines.py
tests/: 001_daemon.py  connect.py  ledger.py  test_distrbuted_list.py  test_journal.py
