[project]
name = ""
version = ""
description = ""
authors = [
    {name = "DylanEHolland", email = "salinson1138@gmail.com"},
]
dependencies = [
    "argparse>=1.4.0",
]
requires-python = ">=3.9"
license = {text = "BSD"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
